@@ -27,6 +27,9 @@ void a_UIcmd_search_dialog(void *vbw);
 void a_UIcmd_book(void *vbw);
 void a_UIcmd_add_bookmark(BrowserWindow *bw, const DilloUrl *url);
 void a_UIcmd_fullscreen_toggle(BrowserWindow *bw);
+void a_UIcmd_findtext_dialog(BrowserWindow *bw);
+void a_UIcmd_findtext_search(BrowserWindow *bw, const char *key, int case_sens);
+void a_UIcmd_findtext_reset(BrowserWindow *bw);
 void a_UIcmd_page_popup(void *vbw, const DilloUrl *url,
                         const char *bugs_txt, int prefs_load_images);
 void a_UIcmd_link_popup(void *vbw, const DilloUrl *url);
